--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,7 +1,7 @@
-<h1>Edit a new article </h1>
+
+<div id="page-content">
+  <h1 class="text-center mt-4">Edit article </h1>
 
 <%=render 'form' %>
-
-<p>
-    <%= link_to "Return to home", articles_path %>
-</p>
+<%= link_to "Return to home", articles_path %>
+</div>
