--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,7 +1,10 @@
-<h1>Create a new article </h1>
+<div id="page-content">
+  <h1 class="text-center mt-4">Create new article </h1>
 
   <%= render 'form' %>
 
     <p>
       <%= link_to "Return to home", articles_path %>
     </p>
+
+</div>
