refactoring alpha-blog

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -21,6 +21,9 @@
           <%= f.submit class: "btn btn-outline-light btn-lg" %>
         </div>
       <%end%>
+      <div class="row justify-content-center">
+        <%= link_to "Return to home", articles_path%>
+      </div>
     </div>
   </div>
 </div>
