--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,2 +1,9 @@
-<h1 class="text-center mt-4">Edit article </h1>
-<%=render 'form' %>
+<div class="show-profile">
+    <div class="profile-details">
+        <%=render 'sidebar'%>
+    </div>
+    <div class="article-details">
+        <h1 class="text-center mt-4">Edit article </h1>
+        <%=render 'form' %>
+    </div>
+</div>
