--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,17 @@
-<div class="container" id="home-container">
-  <div class="jumbotron text-center">
-    <h1 class="display-4">Alpha Blog</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-    <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <p class="lead">
-    <%= link_to "Sign up!", signup_path, class: "btn btn-success btn-lg" %>
-    </p>
+<div id="home-container">
+  <div class="jumbotron text-left">
+      <div class="jumbotron-container">
+      <h2> WHERE THE WORLD BLOGS</h2>
+      <hr class="my-4">
+      <p>Millions of bloggers and companies build, ship, and maintain their blogs <br/>
+          on Gitbug—the largest and most advanced blogging platform in the world.</p>
+      <div class="signup-container">
+        <input class="form-control mr-sm-4 form-home" type="search" placeholder="Enter email address" aria-label="Enter email address">
+        <%= link_to "Sign up!", signup_path, class: "btn btn-success btn-sm" %>
+      </div>
+    </div>
+  </div>
+  <div class="rotating-logo">
+    <span></span>
   </div>
 </div>
