--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,6 @@
-<h1 class="text-center mt-4">Sign up for Alpha Blog </h1>
-<%= render 'form' %>
+<div class="new-container">
+    <div class="signup-view">
+        <h3 class="text-center mt-4 mb-3 signup-font">Let's begin the adventure!</h3>
+        <%= render 'form' %>
+    </div>
+</div>
