--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -3,19 +3,20 @@
     <div class="row justify-content-md-center">
       <div class="col-8 mt-4">
         <div class="card text-center shadow mb-5 bg-white rounded">
-          <div class="card-header font-italic">
+          <div class="card-header font-italic custom-headers">
             <% if article.user%>
-              by <%= link_to article.user.username, user_path(article.user)%>
+              <span><%= link_to article.user.username, user_path(article.user)%></span>
             <% end%>
+            <% if logged_in? && (article.user == current_user || current_user.admin?) %>
+              <span>
+                <%= link_to fa_icon('edit'), edit_article_path(article), class: "btn btn-outline-info" %>
+                <%= link_to fa_icon('trash'), article_path(article), method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-outline-danger" %>
+              </span>
+            <%end%>
           </div>
           <div class="card-body">
             <h5 class="card-title"><%= link_to article.title, article_path(article), class: "text-success"%></h5>
             <p class="card-text"><%= truncate(article.description, length: 100) %></p>
-            <%= link_to "View", article_path(article), class: "btn btn-outline-success" %>
-            <% if logged_in? && (article.user == current_user || current_user.admin?) %>
-              <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info" %>
-              <%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-outline-danger" %>
-            <%end%>
           </div>
           <div class="card-footer text-muted">
             <small>Created ago <%= time_ago_in_words(article.created_at)%>,
