--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,12 +1,17 @@
-<h1 class="text-center mt-4">Listing all articles </h1>
+<div class="show-profile">
+    <div class="profile-details">
+        <%=render 'sidebar'%>
+    </div>
+    <div class="article-details">
+        <h1 class="text-center mt-4">Recent posts</h1>
 
-<div class="flickr_pagination">
-    <%= will_paginate @articles, :container => false %>
+        <div class="flickr_pagination">
+            <%= will_paginate @articles, :container => false %>
+        </div>
+
+        <%= render 'article' %>
+        <div class="flickr_pagination mb-4">
+            <%= will_paginate @articles, :container => false %>
+        </div>
+    </div>
 </div>
-
-<%= render 'article' %>
-<%= link_to "Create new article", new_article_path %>
-<div class="flickr_pagination mb-4">
-    <%= will_paginate @articles, :container => false %>
-</div>
-
