--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,29 +1,36 @@
-<h1 class="text-center mt-4"><%= @article.title %></h1>
-
-<div class="container">
-    <div class="row justify-content-md-center">
-      <div class="col-8 mt-4">
-        <div class="card text-center shadow mb-5 bg-white rounded">
-          <div class="card-header font-italic">
-            by <%= @article.user.username%>
-            <%= link_to gravatar_for(@article.user), user_path(@article.user)%>
-          </div>
-          <div class="card-body">
-            <div class="card-text text-left"><%= simple_format(@article.description) %></div>
-            <%if logged_in? && (@article.user == current_user  || current_user.is_admin?) %>
-              <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
-              <%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-outline-danger" %>
-            <% end%>
-          </div>
-          <div class="card-footer text-muted">
-            <small>Created <%= time_ago_in_words(@article.created_at)%> ago,
-            edited <%= time_ago_in_words(@article.updated_at)%> ago
-            </small>
+<div class="show-profile">
+  <div class="profile-details">
+      <%=render 'sidebar'%>
+  </div>
+  <div class="article-details">
+    <h1 class="text-center mt-4"><%= @article.title %></h1>
+    <div class="container">
+        <div class="row justify-content-md-center">
+          <div class="col-8 mt-4">
+            <div class="card text-center shadow mb-5 bg-white rounded">
+              <div class="card-header font-italic custom-headers">
+                <%= link_to @article.user.username, user_path(@article.user)%>
+                <span>
+                  <%if logged_in? && (@article.user == current_user  || current_user.admin?) %>
+                    <%= link_to fa_icon('edit'), edit_article_path(@article), class: "btn btn-outline-info" %>
+                    <%= link_to fa_icon('trash'), article_path(@article), method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-outline-danger" %>
+                  <% end%>
+                </span>
+              </div>
+              <div class="card-body">
+                <div class="card-text text-center"><%= simple_format(@article.description) %></div>
+              </div>
+              <div class="card-footer text-muted">
+                <small>Created <%= time_ago_in_words(@article.created_at)%> ago,
+                edited <%= time_ago_in_words(@article.updated_at)%> ago
+                </small>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
     </div>
+    <div class="text-center">
+    <%= link_to "Create new article", new_article_path %>
+    </div>
+  </div>
 </div>
-<p>
-<%= link_to "Create new article", new_article_path %>
-</p>
