--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,36 +1,56 @@
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-10">
+    <div class="col-5">
       <%= render 'shared/errors', obj: @user %>
-      <%= form_with(model: @user, class: "shadow p-3 mb-5 bg-info rounded", local:true)do  |f| %>
-        <div class="form-group row">
-          <%= f.label :username, class: "col-2 col-form-label text-light", placeholder: "Title" %>
-          <div class="col-10">
-            <%= f.text_field :username, class: "form-control shadow rounded", placeholder: "Enter a Username" %>
+      <%= form_with(model: @user, class: "shadow p-3 mb-5 rounded", local:true)do  |f| %>
+        <% if logged_in?%>
+          <div class="form-group row user-form">
+            <%= f.label :username, class: "col-2 col-form-label mr-3", placeholder: "Title" %>
+            <div class="col-7">
+              <%= f.text_field :username, class: "form-control shadow rounded", placeholder: "Enter a Username" %>
+            </div>
           </div>
-        </div>
 
-        <div class="form-group row">
-          <%= f.label :email,class: "col-2 col-form-label text-light" %>
-          <div class="col-10">
-            <%= f.email_field :email, class: "form-control shadow rounded", placeholder: "Enter Email" %>
+          <div class="form-group row user-form">
+            <%= f.label :email,class: "col-2 col-form-label mr-3" %>
+            <div class="col-7">
+              <%= f.email_field :email, class: "form-control shadow rounded", placeholder: "Enter Email" %>
+            </div>
           </div>
-        </div>
 
-        <div class="form-group row">
-          <%= f.label :password,class: "col-2 col-form-label text-light" %>
-          <div class="col-10">
-            <%= f.password_field :password, class: "form-control shadow rounded", placeholder: "Choose Password" %>
+          <div class="form-group row user-form">
+            <%= f.label :password,class: "col-2 col-form-label mr-3" %>
+            <div class="col-7">
+              <%= f.password_field :password, class: "form-control shadow rounded", placeholder: "Choose Password" %>
+            </div>
           </div>
-        </div>
+        <%else%>
+            <div class="form-group row user-form">
+              <%= f.label :username, class: "col-2 col-form-label text-light mr-3", placeholder: "Title" %>
+              <div class="col-7">
+                <%= f.text_field :username, class: "form-control shadow rounded", placeholder: "Enter a Username" %>
+              </div>
+            </div>
+
+            <div class="form-group row user-form">
+              <%= f.label :email,class: "col-2 col-form-label text-light mr-3" %>
+              <div class="col-7">
+                <%= f.email_field :email, class: "form-control shadow rounded", placeholder: "Enter Email" %>
+              </div>
+            </div>
+
+            <div class="form-group row user-form">
+              <%= f.label :password,class: "col-2 col-form-label text-light mr-3" %>
+              <div class="col-7">
+                <%= f.password_field :password, class: "form-control shadow rounded", placeholder: "Choose Password" %>
+              </div>
+            </div>
+        <%end%>
 
         <div class="form-group row justify-content-center">
-          <%= f.submit(@user.new_record? ? "Sign up" : "Update account", class: "btn btn-outline-light btn-lg") %>
+          <%= f.submit(@user.new_record? ? "Sign up" : "Update account", class: "btn btn-success btn-sm") %>
         </div>
       <%end%>
-      <div class="row justify-content-center">
-        <%= link_to "Return to home", articles_path%>
-      </div>
     </div>
   </div>
 </div>
