--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,9 +14,13 @@
           Explore
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <% if logged_in? %>
+          <% if logged_in? && current_user.admin?%>
+            <%=link_to "Create category", new_category_path, class: "dropdown-item"%>
+            <%=link_to "Create post", new_article_path, class: "dropdown-item"%>
+          <% elsif logged_in? %>
             <%=link_to "Create post", new_article_path, class: "dropdown-item"%>
           <%end%>
+        <%=link_to "View categories", categories_path, class: "dropdown-item"%>
         <%=link_to "View posts", articles_path, class: "dropdown-item"%>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="#">Placeholder dropdown</a>
@@ -38,9 +42,9 @@
             <%=link_to "Delete profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete, data: {confirm: "Are you sure?"}%>
           </div>
         </li>
-          <li class="nav-item">
-            <%=link_to 'Sign out', logout_path, class: "nav-link", method: :delete %>
-          </li>
+        <li class="nav-item">
+          <%=link_to 'Sign out', logout_path, class: "nav-link", method: :delete %>
+        </li>
         <% else %>
           <li class="nav-item">
             <%=link_to 'Sign in', login_path, class: "nav-link"%>
