--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -7,6 +7,9 @@
             <% if article.user%>
               <span><%= link_to article.user.username, user_path(article.user)%></span>
             <% end%>
+            <% if article.categories.any? %>
+              <div class="mt-2"><%=render article.categories%></div>
+            <%end%>
             <% if logged_in? && (article.user == current_user || current_user.admin?) %>
               <span>
                 <%= link_to fa_icon('edit'), edit_article_path(article), class: "btn btn-outline-info" %>
