--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -17,6 +17,14 @@
           </div>
         </div>
 
+        <div class="form-group row user-form">
+          <%= f.label :category, class: "col-2 col-form-label mr-3", placeholder: "Description" %>
+          <div class="col-8">
+              <%=f.collection_select(:category_ids, Category.all, :id, :name,
+              { prompt: "Choose category"}, {multiple: true, size: 3, class: "custom-select shadow rounded"})%>
+          </div>
+        </div>
+
         <div class="form-group row justify-content-center">
           <%= f.submit class: "btn btn-success btn-sm" %>
         </div>
